TomW: add title

--- a/src/main/web/TicTac.html
+++ b/src/main/web/TicTac.html
@@ -8,7 +8,7 @@
 <script src="tictac.js"></script>
 
 <body>
-
-<div id="board-container"></div>
+    <h2>Tic Tac Toe</h2>
+    <div id="board-container"></div>
 </body>
 </html>
